--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -24,5 +24,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "hardhat": "^2.23.0"
+  },
+  "dependencies": {
+    "glob": "^11.0.2",
+    "lru-cache": "^11.1.0"
   }
 }
