--- a/pixel-wall-frontend/package.json
+++ b/pixel-wall-frontend/package.json
@@ -11,11 +11,12 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.74.11",
+    "@wagmi/core": "^1.4.13",
     "qr": "^0.4.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "viem": "^2.28.1",
-    "wagmi": "^2.15.1"
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
